--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "Add description later.",
 	"author": "Grol",
 	"authorUrl": "https://github.com/groldsf",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
