--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.25.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@datastructures-js/binary-search-tree": "^5.3.2",
+		"cron-parser": "^5.0.4"
 	}
 }
